syntax = "proto3";

package redis;

service RedisService {
  rpc GetNearbyDrivers (NearbyDriversRequest) returns (NearbyDriversResponse);
}

message NearbyDriversRequest {
  double latitude = 1;
  double longitude = 2;
  string userId = 3;
}

message DriverInfo {
    string driverId = 1;    
    string timeAway = 2;  
}

message NearbyDriversResponse {
  repeated string driverIds = 1;
  repeated DriverInfo driversWithTimeAway = 2;
}

